added popup functionality

--- a/style.css
+++ b/style.css
@@ -11,15 +11,35 @@
 }
 
 .wrapper{
-    height: 100vh;
+    min-height: 100vh;
     background-color: var(--background-color);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.button-container{
+    flex: .3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.new-book{
+    width: 200px;
+    height: 50px;
 }
 
 .card-container{
+    
     flex: 1;
     display: flex;
     flex-wrap: wrap;
-    gap: 50px;
+    gap: 30px;
+    align-items: center;
+    justify-content: center;
+    width: 80%;
 }
 
 .card{
@@ -51,7 +71,7 @@ h1{
     position: fixed;
     left: 50%;
     top: 50%;
-    transform: translate(-50%, -50%) scale(1);
+    transform: translate(-50%, -50%) scale(0);
     width: 400px;
     height: 500px;
     max-width: 80%;
@@ -67,8 +87,8 @@ h1{
     z-index: 3;
 
 }
-.modal .active{
-    transform: translate(-50%, -50%) scale(0);
+.modal.active{
+    transform: translate(-50%, -50%) scale(1);
 }
 
 .overlay{
@@ -77,12 +97,12 @@ h1{
     height: 100%;
     left: 50%;
     top: 50%;
-    transform: translate(-50%, -50%) scale(1);
+    transform: translate(-50%, -50%) scale(0);
     background-color: rgba(0,0,0,0.5);
 }
 
-.overlay .active{
-    transform: translate(-50%, -50%) scale(0);
+.overlay.active{
+    transform: translate(-50%, -50%) scale(1);
 }
 
 .modal-header{
